examples/test/testpolicy12155.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12155
  namespace: namespace349
spec:
  podSelector:
    matchLabels:
      key0: value29
      key4: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value11
      podSelector:
        matchLabels:
          key20: value17
          key24: value6
